--- a/PHP/univ cuy/layout/header.html
+++ b/PHP/univ cuy/layout/header.html
@@ -1,5 +1,5 @@
 <header>
   <h2>HAI</h2>
-  <a href="">login</a>
-  <a href="">signup</a>
+  <a href="login.php">login</a>
+  <a href="signup.php">signup</a>
 </header>
